# PresionRegister

./: Dockerfile  README.md  main.py  pyproject.toml
src/presionregister/: config.py  logger.py  models.py  spreadsheet.py
