[project]
name = "presionregister"
version = "0.1.0"
description = "Registro de presion arterial personal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

#[project.scripts]
# Esto permite ejecutar la app solo escribiendo 'uv run start' o 'uv run dev' para desarrollo
#start = "uvicorn main:app --host 0.0.0.0 --port 8000 --workers 1"
#dev = "uvicorn main:app --reload"
